how to debug use real phone

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Use IntelliJ IDEA14.1.4
 For Android4.1.2
 HelloWorld Level
+Use Real Phone to debug reference http://blog.csdn.net/bldream/article/details/10430269
